# mkwii-port

./: .gitignore  CMakeLists.txt  MAESTRO_PROMPT.md  README.md  worklog.md
_btmp/: CMakeCache.txt  Makefile  cmake_install.cmake
agent-ctx/: 1-main.md
data/: COVERAGE_GAPS.md  CROSSVAL_REPORT.md  SYMBOL_REPORT.md
data/config/: batch_sizes.json  paths.json  priorities.json
data/decompiled/: decompile_ai_collision.py
data/decompiled/AIRace/: 0x80523E94.c  0x80525988.c  0x80526F40.c  0x807284C4.c  0x80728570.c  0x807285F8.c  0x807286A0.c  0x807286EC.c  0x80728734.c  0x80728778.c  0x807287B8.c  0x80728820.c  0x80728824.c  0x80728868.c  0x80728890.c  0x80728898.c  0x807288AC.c  0x807288B4.c  0x807289D0.c  0x807289E4.c  0x807289F8.c  0x80728A0C.c  0x80728A20.c  0x80728A34.c  0x8072A6F4.c  0x8072A6FC.c  0x8072AAB0.c  0x8072C284.c  0x8072C400.c  0x8072C5D0.c  0x8072C704.c  0x8072C790.c  0x8072C7D0.c  0x8072C7D8.c  0x8072C7E0.c  0x8072C7F8.c  0x8072C864.c  0x8072CA58.c  0x8072CB38.c  0x8072CB9C.c  (+20 more)
data/decompiled/Collision/: 0x80570A54.c  0x80570B0C.c  0x80570BF4.c  0x80570C4C.c  0x80570DBC.c  0x80570E18.c  0x80570EEC.c  0x8057130C.c  0x8057166C.c  0x80571754.c  0x80571978.c  0x80571CD8.c  0x80574A64.c  0x80575108.c  0x805755BC.c  0x80575658.c  0x80575660.c  0x80575678.c  0x80575698.c  0x805756B0.c  0x805756C8.c  0x8057570C.c  0x80575744.c  0x805764D8.c  0x8057D5F0.c  0x8058681C.c  0x8059B9BC.c  0x8059BB78.c  0x8059C3BC.c  0x8059C43C.c  0x8059C760.c  0x805B72AC.c  0x805B8C0C.c  0x805B9E10.c  0x805BA430.c  0x805BA46C.c  0x805BA4A4.c  0x805BA640.c  0x805BA6B8.c  0x805BA7A4.c  (+8 more)
data/decompiled/ItemSystem/: 0x80574a64.c  0x805818c0.c  0x80582ffc.c  0x80587d94.c  0x8059e600.c  0x8065e5d4.c  0x8065e890.c  0x8065ead0.c  0x8065f704.c  0x8065fa50.c  0x80660224.c  0x80792fe4.c  0x80793364.c  0x80793df8.c  0x807966d8.c  0x807981b4.c  0x807982ec.c  0x80798450.c  0x80798958.c  0x80799bc8.c  0x80799e10.c  0x8079b484.c  0x8079b7c0.c  0x8079ba04.c  0x8079bc7c.c  0x8079bd38.c  0x8079c194.c  (+24 more)
data/dol_sections/: main_dol_analysis.json
data/knowledge/: known_values.json  known_values_summary.json  nsmbw_methodology.md  tockdom_classes.json
data/rel_sections/: staticr_rel_analysis.json
data/reports/: function_prologues.json  heartbeat.json  master_log.md  module_map.json  string_table.json  type_database.json  type_refinement.json
data/src/: common.h
data/symbols/: AIRace_symbol_summary.json  AIRace_symbols.json  Collision_symbol_summary.json  Collision_symbols.json  ItemSystem_symbol_summary.json  ItemSystem_symbols.json  KartMovement_symbol_summary.json  KartMovement_symbols.json  Physics_symbol_summary.json  Physics_symbols.json  RaceEngine_symbol_summary.json  RaceEngine_symbols.json  gecko_codes.json  gecko_summary.json  global_map.json
src/: main.cpp
src/game/: AIController.cpp  AIController.hpp  BitmapFont.cpp  BitmapFont.hpp  CollisionSystem.cpp  CollisionSystem.hpp  EffectsManager.cpp  EffectsManager.hpp  GameMenu.cpp  GameMenu.hpp  HUD.cpp  HUD.hpp  ItemBox.cpp  ItemBox.hpp  KartEntity.cpp  KartEntity.hpp  RaceSession.cpp  RaceSession.hpp
src/loaders/: bmd_loader.cpp  bmd_loader.hpp  breff_loader.cpp  breff_loader.hpp  breft_loader.cpp  breft_loader.hpp  brlyt_parser.cpp  brlyt_parser.hpp  kcl_loader.cpp  kcl_loader.hpp  kmp_loader.cpp  kmp_loader.hpp  szs_reader.cpp  szs_reader.hpp  test_track_load.cpp  track_manager.cpp  track_manager.hpp
src/modules/: BSP.hpp  CMakeLists.txt  CourseMap.hpp  KPadController.hpp  KPadDirector.hpp  KPadPlayer.hpp  README.md  RKGeom.hpp  RaceConfig.hpp  common.h  decomp.h  mkwii.h  modules  rk_common.h  rk_types.h  stubs.c  stubs.h  types.h
src/modules/AIRace/: AIRace.c  AIRace.h  _manifest.json
src/modules/Audio/: Audio.c  Audio.h  _manifest.json
src/modules/Collision/: Collision.c  Collision.h  _manifest.json
src/modules/Data/: Data.c  Data.h  _manifest.json
src/modules/EGG/: math.h
src/modules/ItemSystem/: ItemSystem.c  ItemSystem.h  _manifest.json
src/modules/KartMovement/: KartMovement.c  KartMovement.h  _manifest.json
src/modules/Network/: Network.c  Network.h  _manifest.json
src/modules/Physics/: Physics.c  Physics.h  _manifest.json
src/modules/RaceEngine/: RaceEngine.c  RaceEngine.h  _manifest.json
src/modules/Rendering/: Rendering.c  Rendering.h  _manifest.json
src/modules/Runtime/: Runtime.c  Runtime.h  _manifest.json
src/modules/Scene/: Scene.c  Scene.h  _manifest.json
src/modules/UI/: UI.c  UI.h  _manifest.json
src/modules/Unknown/: Unknown.h  _manifest.json
src/modules/egg/core/: eggDisposer.hpp  eggHeap.hpp
src/modules/egg/math/: eggMatrix.hpp  eggQuat.hpp  eggVector.hpp
src/modules/game/field/: CollisionEntries.hpp  CourseColManager.hpp  CourseModel.hpp  KCollision.hpp
src/modules/game/kart/: BSP.hpp  KartBody.hpp  KartDynamics.hpp  KartHitbox.hpp  KartInput.hpp  KartMove.hpp  KartObjectProxy.hpp  KartPhysicsEngine.hpp  KartState.hpp  KartWheel.hpp
src/modules/game/system/: CourseMap.hpp  KPadController.hpp
src/modules/game/util/: State.hpp
src/modules/host_system/: ParameterFile.hpp
src/modules/rvl/mtx/: mtx.h
src/modules/shims/: PlayerKartProxy.hpp  ai_bridge.cpp  ai_input_store.hpp  audio.hpp  collision_physics_bridge.cpp  course_bridge.cpp  dvd.hpp  effect_bridge.cpp  exi.hpp  gx.hpp  isfs.hpp  item_bridge.cpp  nand.hpp  os_alarm.hpp  os_arena.hpp  os_cache.hpp  os_memory.hpp  os_mutex.hpp  os_thread.hpp  os_time.hpp  pad.hpp  pad_bridge.cpp  race_bridge.cpp  sound_bridge.cpp  vi.hpp  wii_shims.hpp
src/modules/shims/ax_audio/: ax_shim.h
src/modules/system/: Competition.hpp  ElineControlManager.hpp  GhostFile.hpp  InitScene.hpp  KPadDirector.hpp  Mii.hpp  RKBitField.hpp  RaceConfig.hpp  RaceManager.hpp  RaceMode.hpp  Rating.hpp  ResourceManager.hpp  system_stubs.cpp
src/modules/util/: Random.hpp
src/platform/: audio.cpp  audio.hpp  course_model_renderer.cpp  course_model_renderer.hpp  gl3_core.h  graphics.cpp  graphics.hpp  gx_renderer.cpp  gx_renderer.hpp  input.cpp  input.hpp  openal_stub.h  sdl2_stub.h  window.cpp  window.hpp
test/: link_stubs.cpp  main.cpp
(+18051 files in other folders)
